[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/TitleScreen/End_Screen.gd" type="Script" id=1]
[ext_resource path="res://2D_Art/Fire_Particles.png" type="Texture" id=2]
[ext_resource path="res://Fonts/MountainsofChristmas.ttf" type="DynamicFontData" id=3]

[sub_resource type="Gradient" id=9]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 0.876129, 0.613281, 1, 0.816406, 0.37392, 0.108429, 1 )

[sub_resource type="GradientTexture" id=10]

flags = 4
gradient = SubResource( 9 )
width = 512

[sub_resource type="Gradient" id=4]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0.625, 0.709961, 1, 1, 1, 1, 1, 0.359098 )

[sub_resource type="GradientTexture" id=11]

flags = 4
gradient = SubResource( 4 )
width = 128

[sub_resource type="Curve" id=7]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.682617 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]

flags = 4
width = 128
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=12]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 780, 1, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 60, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 1.0
damping_random = 1.0
angle = 180.0
angle_random = 1.0
scale = 0.2
scale_random = 0.4
scale_curve = SubResource( 8 )
color_ramp = SubResource( 11 )
hue_variation = 0.1
hue_variation_random = 1.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false

[sub_resource type="DynamicFont" id=13]

size = 102
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=14]

size = 34
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=15]

size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="End_Screen" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 10 )
expand = true
stretch_mode = 0

[node name="Snow_Like_Particles" type="Particles2D" parent="." index="1"]

self_modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 630, -50 )
emitting = true
amount = 64
lifetime = 5.0
one_shot = false
preprocess = 5.0
speed_scale = 0.65
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 12 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Time", "Visibility" ]

[node name="Label_Thanks" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Thanks for playing!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Label_Info" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 147.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dreams of Fire was created in 3 days
for Godot community Jam - June 2018!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Label_Buttons" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 297.0
margin_bottom = 450.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Check out the other entries here:

You can find the source code for Dreams of Fire here:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Button_Jam_Entries" type="Button" parent="." index="5"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -14.0
margin_right = 200.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 15 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Godot jam entries"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button_Github_Repo" type="Button" parent="." index="6"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = 96.0
margin_right = 200.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 15 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Github repository"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button_Return_Title" type="Button" parent="." index="7"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = 220.0
margin_right = -10.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 15 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Return to title screen"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Button_Quit" type="Button" parent="." index="8"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 220.0
margin_right = 390.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 15 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit Game"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]


